# mini-container

./: .golangci.yml  LICENSE  Makefile  README.md  docker-pull.sh  docker.py  go.mod  image_downloader.py  main.go  main_test.go  mypy.ini  pyproject.toml  requests.py  ruff.toml  setup_container.sh  setup_network.sh
.github/workflows/: ci.yml
pkg/api/: integration_test.go  mock.go  requests.go  requests_test.go
pkg/command/: command.go  command_test.go
pkg/downloader/: downloader.go  downloader_test.go  integration_test.go  mock.go
pkg/network/: network.go  network_test.go
src/docker_tool/: api_requests.py  command.py  docker.py  image_downloader.py  network.py
tests/: test_api_requests.py  test_command.py  test_image_downloader.py  test_network.py
